# rust

img/: .envrc  .gitignore  Cargo.toml  Dockerfile  clippy.sh  dev.sh  dist.sh  docker.run.sh  run.sh
img/sh/: jpegxl-rs.sh  upx.sh
img/src/: err.rs  img.rs  log.rs  main.rs  root.rs  urlmap.rs
